--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -14,10 +14,10 @@
 
   <style>
     nav{
-      background-color: green;
+      background-color: rgb(2, 129, 2);
     }
     .one-edge-shadow {
-              box-shadow: 0 8px 2px -5px rgb(246, 245, 245);
+              box-shadow: 0 8px 2px -5px rgb(249, 246, 246);
 }
 .display-8{
   font-weight: 200;
