--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -7,14 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <title>E-commerce Website</title>
+  <title>RAYA CLOTHING</title>
+  {% load static %}
+    <link rel="stylesheet" href="{% static 'styles_store.css' %}">
+
 
   <style>
     nav{
-      background-color: green;
+      background-color: rgb(80, 3, 53);
     }
     .one-edge-shadow {
               box-shadow: 0 8px 2px -5px rgb(246, 245, 245);
@@ -30,24 +35,20 @@
 <body>
   <!-- navbar -->
 
-<nav class="one-edge-shadow
-  navbar navbar-light
-  sticky-top navbar 
-  navbar-expand-lg
-  text-white">
+<!-- <nav class="navbar-expand-lg bg-light shadow">
     <a class="navbar-brand ms-3 text-dark " href="/">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
-    <img src="https://www.freepnglogos.com/uploads/shopping-cart-png/shopping-cart-svg-png-icon-download-28.png" style="width:50px;height:50px,colortext-light;">E-Commerce</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+     <img src="https://www.freepnglogos.com/uploads/shopping-cart-png/shopping-cart-svg-png-icon-download-28.png" style="width:50px;height:50px,colortext-light;">E-Commerce</a> -->
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+       <ul class="navbar-nav mr-auto"> -->
+        <!-- <li class="nav-item active">
           <a class="nav-link" href="/store">Store <span class="sr-only">(current)</span></a>
         </li>
 
@@ -56,15 +57,15 @@
 
 
 
-      <ul class=" navbar-nav my-2 my-lg-0">
+      <ul class=" navbar-nav ms-auto mb-2 mb-lg-0">
 
-        <li class="nav-item active">
+        <li class="nav-item active" style="padding-right: 5rem;">
           <a class="nav-link" href="/cart">Cart 
             <span class="badge badge-success">{{request.session.cart.keys|length}}</span>
             <span class="sr-only">(current)</span></a>
-        </li>
+        </li> -->
 
-        {% if request.session.customer %}
+        <!-- {% if request.session.customer %}
         
         <li class="nav-item active ">
           <a class="nav-link" href="/orders">Orders<span class="sr-only">(current)</span></a>
@@ -80,14 +81,48 @@
         <li class="nav-item active">
           <a class="nav-link" href="/login">Login<span class="sr-only">(current)</span></a>
         </li>
-        {% endif %}
+        {% endif %} -->
 
-
+<!-- 
       </ul>
 
 
     </div>
-  </nav>
+  </nav> --> 
+  <nav class="navbar navbar-expand-lg bg-light shadow">
+    <!-- <img src="#" alt="Logo" width="150" class="logos"> -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item about">
+              <a class="nav-link" href="/cart">Cart 
+                <span class="badge badge-success abd">{{request.session.cart.keys|length}}</span>
+                <span class="sr-only">(current)</span></a>
+            </li>
+            {% if request.session.customer %}
+            <li class="nav-item">
+              <a class="nav-link" href="/orders">Orders<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown login">
+              <a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
+              {% else %}
+       
+              <li class="nav-item active">
+                <a class="nav-link" href="/signup">Signup<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/login">Login<span class="sr-only">(current)</span></a>
+              </li>
+              {% endif %}
+      
+                </ul>
+            </li>
+        </ul>
+    </div>
+</nav>
   <!---->
   {% block content %}{% endblock %}
 
