--- a/store/static/styles_store.css
+++ b/store/static/styles_store.css
@@ -2,4 +2,10 @@
     color: #fff;
     background-color: rgb(80, 3, 53);
     }
-    
+
+    .btn-outline-success:not(:disabled):not(.disabled).active, .btn-outline-success:not(:disabled):not(.disabled):active, .show>.btn-outline-success.dropdown-toggle {
+        color: #fff;
+        background-color: rgb(80, 3, 53);
+        border-color: #03000266;
+        }
+           
