--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -90,7 +90,7 @@
     </div>
   </nav> --> 
   <nav class="navbar navbar-expand-lg bg-light shadow">
-    <!-- <img src="#" alt="Logo" width="150" class="logos"> -->
+    <img src="{% static 'Logo.png' %}"   alt="Logo" width="150" class="logos"> 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
