--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -4,6 +4,20 @@
 
 {% load cart %}
 {% load custom_filter %}
+<style>
+.btno {
+        border-color: #03000266 ;
+        }
+.btno:hover {
+	border-color: rgb(80, 3, 53);
+}
+
+.btno:not(:disabled):not(.disabled).active, .btno:not(:disabled):not(.disabled):active, .show>.btno.dropdown-toggle {
+	color: #fff;
+	background-color: rgb(80, 3, 53);
+	border-color: #03000266;
+	}
+</style>
 <!-- body -->
 <div class="container-fluid mt-3">
 	<div class="row">
@@ -14,11 +28,11 @@
 		<div class="col-lg-3 mx-auto">
 			<div class="list-group">
 
-				<a href="/" class="list-group-item list-group-item-action btn btn-outline-success">All Products</a>
+				<a href="/" class="list-group-item list-group-item-action btn btn-outline-success btno">All Products</a>
 
 				{% for category in categories %}
 				<a href="/?category={{category.id}}"
-					class="list-group-item list-group-item-action btn btn-outline-success ">{{category.name}}</a>
+					class="list-group-item list-group-item-action btn btn-outline-success btno">{{category.name}}</a>
 				{% endfor %}
 			</div>
 		</div>
