Changes to nav bar

--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -11,6 +11,10 @@
 .btno:hover {
 	border-color: rgb(80, 3, 53);
 }
+.btno.focus, .btno:focus {
+	box-shadow: 0 0 0 .2rem rgb(80, 3, 53);
+}
+
 
 .btno:not(:disabled):not(.disabled).active, .btno:not(:disabled):not(.disabled):active, .show>.btno.dropdown-toggle {
 	color: #fff;
