--- a/store/templates/signup.html
+++ b/store/templates/signup.html
@@ -2,7 +2,29 @@
 
 
 {% block content %}
-
+<style>
+    .btns:not(:disabled):not(.disabled).active, .btns:not(:disabled):not(.disabled):active, .show>.btns.dropdown-toggle {
+        color: #fff;
+        background-color:#550331;
+        border-color: #550331;
+    }
+    .btns:hover {
+    color: #fff;
+    background-color: #550331;
+    border-color: #550331;
+    }
+    
+    .btns {
+    color: #fff;
+    background-color: #550331;
+    border-color: #550331;
+    }
+    .btns.focus, .btns:focus {
+    box-shadow: 0 0 0 .2rem #550331;
+    }
+    
+    
+        </style>
 <div class="container mt-4">
     
     <div class="p-3 m-3">
@@ -12,14 +34,14 @@
             <div class="text-center col">
             
                 <img
-                src="https://th.bing.com/th/id/Rd51d7c0fde6d96a31538a86cbd57f3c0?rik=%2fTJxRkU2V371QQ&riu=http%3a%2f%2ftechnologyend.com%2fwp-content%2fuploads%2f2015%2f11%2fwhy-shop-online.jpg&ehk=v1KiYT0i5U1ABCRueDSdLqnazh2BdlVD89Z4qXE0Kgs%3d&risl=&pid=ImgRaw" alt=""
-                class="" style="height: 150px;">
+                src="https://clipart.world/wp-content/uploads/2021/07/Shopping-clipart-for-free.png" alt=""
+                class="" style="height: 180px;">
             <!-- <hr> -->
             <hr>
             </div>
-            <h3 class="alert alert-success rounded-pill" style="text-align:center">Create an Account</h3>
-            <form action="/signup" method="POST">
-                
+            
+            <h3 class="alert alert-light rounded-pill" style="text-align:center" >Sign up</h3>
+            <form action="/signup" method="POST">   
                 {% csrf_token %}
 
                 {% if error%}
@@ -49,7 +71,7 @@
                     <input type="text" name="phone" 
                     id="" class="form-control form-control-sm"
                     value="{{values.phone}}"
-                    placeholder="9876543210"
+                    placeholder="94123456789"
                     >
                 </div>
                 <!-- email -->
@@ -57,7 +79,7 @@
                     <label for="">Email</label>
                     <input required type="email" name="email" id=""
                     value="{{values.email}}" 
-                    class=" form-control-sm form-control" placeholder="abc@gmail.com">
+                    class=" form-control-sm form-control" placeholder="example@gmail.com">
                 </div>
 
 
@@ -70,13 +92,13 @@
                      class="form-control form-control-sm">
                 </div>
 
-                <!--Checkme button-->
+                <!-- Checkme button
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label d-grid gap-2" for="exampleCheck1">Check me out</label>
-                </div>
+                </div> -->
                 <hr>
-                <button type="submit" class="btn btn-sm btn-success col-lg-12">Create an account</button>
+                <button type="submit" class="btn btn-sm btn-success col-lg-12 btns mb-3">Sign me Up</button>
 
             </form>
         </div>
