--- a/store/templates/search.html
+++ b/store/templates/search.html
@@ -61,20 +61,20 @@
 								{% csrf_token %}
 								<input hidden type="text" name='product' value='{{product.id}}'>
 								<input hidden type="text" name='remove' value='True'>
-								<input type="submit" value=" - " class="btn btn-block btn-success border-right">
+								<input type="submit" value=" - " class="btn btn-block btn-success border-right btno mb-3">
 							</form>
 							<div class="text-center col btn btn-success">{{product|cart_quantity:request.session.cart}} in Cart</div>
 							<form action="/#{{product.id}}" class="col-2 " method="post">
 								{% csrf_token %}
 								<input hidden type="text" name='product' value='{{product.id}}'>
-								<input type="submit" value=" + " class="btn btn-block btn-success border-left">
+								<input type="submit" value=" + " class="btn btn-block btn-success border-left btno mb-3">
 							</form>
 						</div>
 						{% else %}
 						<form action="/#{{product.id}}" method="POST" class="btn-block">
 							{% csrf_token %}
 							<input hidden type="text" name='product' value='{{product.id}}'>
-							<input type="submit" class="float-right btn btn-success form-control"
+							<input type="submit" class="float-right btn btn-success form-control btno mb-3"
 								value="Add To Cart">
 						</form>
 						{% endif %}
